--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,3 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 } */
+
+.text-shadow-dark {
+    text-shadow: 0px 0px 2px rgba(0,0,0,0.8), 0px 0px 4px rgba(0,0,0,0.5);
+  }
